@@ -17,6 +17,12 @@
    step of the construction and a KToggleAction like "Settings->Show Side
    List" to show/hide it ).
 
+- Add the possibility to select, via new dialog, one or more types of
+  object.
+
+- add "Tools": easy tools designed for geometry, like Angle converter and
+  so on...
+
 - add intersection type between arcs and the other objects.
 
 - add ObjectType's to the ObjectTypeFactory automatically.
