@@ -193,7 +193,7 @@ void KigDocument::setupActions()
   aNewMacro->setToolTip(i18n("Define a new macro"));
 
   aConfigureTypes = new KAction(
-    i18n("Manage &Types"), 0, this, SLOT(editTypes()),
+    i18n("Manage &Types..."), 0, this, SLOT(editTypes()),
     actionCollection(), "types_edit");
   aConfigureTypes->setToolTip(i18n("Manage macro types."));
 
